--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -22,3 +22,17 @@ li{
   color: white;
   text-decoration: underline;
 }
+
+.process h2{
+  font-size: 32px;
+  font-weight: bold;
+}
+
+.stage h3{
+  font-size: 23px;
+  font-weight: bold;
+}
+
+.stage p{
+  font-size: 14px;
+}
