--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -42,3 +42,21 @@ li{
   font-weight: bold;
   color: white;
 }
+
+.footer{
+  background-color: dimgray;
+  color: white;
+  text-align: left;
+  overflow: hidden;
+  font-size: 11px;
+}
+
+.footer p{
+  display: block;
+}
+
+
+.footer-element{
+  font-size: 18px;
+  color: white;
+}
